
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr {int dummy; } ;
typedef int socklen_t ;


 int EINTR ;
 int close (int) ;
 int content ;
 int errno ;
 int real_accept (int,struct sockaddr*,int *) ;
 int strlen (int ) ;
 int trace (char*) ;
 int write (int,int ,int ) ;

int fake_accept(int fd, struct sockaddr *addr, socklen_t *addrlen)
{
 int client_fd;

 trace("fake_accept()ing it up\n");

 client_fd = real_accept(fd, addr, addrlen);
 if(client_fd <= 0) return client_fd;

 write(client_fd, content, strlen(content));

 close(client_fd);

 errno = EINTR;
 return -1;
}
