; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/php/local/extr_23022.c_fake_accept.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/php/local/extr_23022.c_fake_accept.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr = type { i32 }

@.str = private unnamed_addr constant [24 x i8] c"fake_accept()ing it up\0A\00", align 1
@content = common dso_local global i32 0, align 4
@EINTR = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fake_accept(i32 %0, %struct.sockaddr* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.sockaddr*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.sockaddr* %1, %struct.sockaddr** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = call i32 @trace(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %10 = load i32, i32* %5, align 4
  %11 = load %struct.sockaddr*, %struct.sockaddr** %6, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = call i32 @real_accept(i32 %10, %struct.sockaddr* %11, i32* %12)
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %8, align 4
  %15 = icmp sle i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* %8, align 4
  store i32 %17, i32* %4, align 4
  br label %27

18:                                               ; preds = %3
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* @content, align 4
  %21 = load i32, i32* @content, align 4
  %22 = call i32 @strlen(i32 %21)
  %23 = call i32 @write(i32 %19, i32 %20, i32 %22)
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @close(i32 %24)
  %26 = load i32, i32* @EINTR, align 4
  store i32 %26, i32* @errno, align 4
  store i32 -1, i32* %4, align 4
  br label %27

27:                                               ; preds = %18, %16
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local i32 @trace(i8*) #1

declare dso_local i32 @real_accept(i32, %struct.sockaddr*, i32*) #1

declare dso_local i32 @write(i32, i32, i32) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
